Apply UZH patches